--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -1,14 +1,29 @@
+[colors]
+background = #282A2E
+background-alt = #373B41
+foreground = #C5C8C6
+primary = #F0C674
+secondary = #8ABEB7
+alert = #A54242
+disabled = #707880
+
 [bar/top]
+background = ${colors.background}
+foreground = ${colors.foreground}
 bottom = false
 font-0 = JetBrainsMono NF:size=10
 modules-left = i3 cpu memory battery filesystem pulseaudio
+modules-center = xwindow
 modules-right = date
 module-margin = 1
 separator = |
+separator-foreground = ${colors.disabled}
 tray-position = right
 dpi-x = 96
 dpi-y = 96
 double-click-interval = 400
+radius = 6
+border-size = 4pt
 
 [module/pulseaudio]
 type = internal/pulseaudio
@@ -48,7 +63,7 @@ full-at = 99
 low-at = 10
 label-charging = Battery Charging %percentage%%
 label-discharging = Battery Discharging %percentage%%
-label-full = Battery %percentage%
+label-full = Battery Full %percentage%%
 
 [module/date]
 type = internal/date
@@ -56,4 +71,11 @@ interval = 1.0
 date = %Y/%m/%d%
 time = %H:%M:%S
 label = %date% %time%
+
+[module/xwindow]
+type = internal/xwindow
+
+[settings]
+screenchange-reload = true
+pseudo-transparency = true
 
