--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,5 +1,10 @@
 set $mod Mod1
 set $super Mod4
+#设置音量
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5%
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5%
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
+bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle
 # 设置字体
 font pango:JetBrains Mono NF 10
 # 退出窗口
