--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -11,14 +11,27 @@ disabled = #707880
 background = ${colors.background}
 foreground = ${colors.foreground}
 bottom = false
-font-0 = JetBrainsMono NF:size=10
-modules-left = i3 cpu memory battery filesystem pulseaudio
+font-0 = Dejavu Sans Mono:size=10
+modules-left = xworkspaces
 modules-center = xwindow
 modules-right = date
 module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 tray-position = right
+tray-maxsize = 16
+tray-scale = 1.0
+
+[bar/bottom]
+background = ${colors.background}
+foreground = ${colors.foreground}
+bottom = true
+font-0 = Dejavu Sans Mono:size=10
+modules-left = cpu memory battery filesystem pulseaudio
+module-margin = 1
+separator = |
+separator-foreground = ${colors.disabled}
+
 dpi-x = 96
 dpi-y = 96
 double-click-interval = 400
@@ -29,13 +42,15 @@ border-size = 4pt
 type = internal/pulseaudio
 use-ui-max = true
 interval = 5
-format-volume = Volume <label-volume>
+format-volume = Volume <label-volume> <bar-volume>
+bar-volume-width = 10
+bar-volume-empty = %{F#FFFFFF}-%{F-}
+bar-volume-fill = %{F#000000}-%{F-} 
+bar-volume-indicator = |
 
 [module/filesystem]
 type = internal/fs
 mount-0 = /
-mount-1 = /home
-mount-2 = /mnt/d
 interval = 10
 spacing = 1
 warn-percentage = 75
@@ -52,10 +67,26 @@ type = internal/memory
 interval = 3
 warn-percentage = 95
 format = <label>
-label = RAM %percentage_used%% %mb_used%/%mb_total% Swap %percentage_swap_used%% %mb_swap_used%/%mb_swap_total%
+label = RAM %percentage_used%% %gb_used%/%gb_total% Swap %percentage_swap_used%% %gb_swap_used%/%gb_swap_total%
 
-[module/i3]
-type = internal/i3
+[module/xworkspaces]
+type = internal/xworkspaces
+
+label-active = %name%
+label-active-background = ${colors.background-alt}
+label-active-underline= ${colors.primary}
+label-active-padding = 1
+
+label-occupied = %name%
+label-occupied-padding = 1
+
+label-urgent = %name%
+label-urgent-background = ${colors.alert}
+label-urgent-padding = 1
+
+label-empty = %name%
+label-empty-foreground = ${colors.disabled}
+label-empty-padding = 1
 
 [module/battery]
 type = internal/battery
@@ -74,6 +105,7 @@ label = %date% %time%
 
 [module/xwindow]
 type = internal/xwindow
+label = %title%
 
 [settings]
 screenchange-reload = true
