--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -21,31 +21,45 @@ separator-foreground = ${colors.disabled}
 tray-position = right
 tray-maxsize = 16
 tray-scale = 1.0
+dpi-x = 96
+dpi-y = 96
+double-click-interval = 400
+; radius = 6
+; border-size = 4pt
 
 [bar/bottom]
 background = ${colors.background}
 foreground = ${colors.foreground}
 bottom = true
 font-0 = Dejavu Sans Mono:size=10
-modules-left = cpu memory battery filesystem pulseaudio
+modules-left = cpu memory swap battery filesystem pulseaudio
 module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
-
 dpi-x = 96
 dpi-y = 96
 double-click-interval = 400
-radius = 6
-border-size = 4pt
+; radius = 6
+; border-size = 4pt
 
 [module/pulseaudio]
 type = internal/pulseaudio
 use-ui-max = true
 interval = 5
-format-volume = Volume <label-volume> <bar-volume>
-bar-volume-width = 10
-bar-volume-empty = %{F#FFFFFF}-%{F-}
-bar-volume-fill = %{F#000000}-%{F-} 
+format-volume = <label-volume> <bar-volume>
+format-volume-prefix-foreground = ${colors.primary}
+label-volume = %{F#f0c674}VOL%{F-} %percentage%%
+labal-muted = sound muted
+bar-volume-foreground-0 = #55aa55
+bar-volume-foreground-1 = #55aa55
+bar-volume-foreground-2 = #55aa55
+bar-volume-foreground-3 = #55aa55
+bar-volume-foreground-4 = #55aa55
+bar-volume-foreground-5 = #f5a70a
+bar-volume-foreground-6 = #ff5555
+bar-volume-width = 15
+bar-volume-empty = -
+bar-volume-fill = -
 bar-volume-indicator = |
 
 [module/filesystem]
@@ -54,20 +68,28 @@ mount-0 = /
 interval = 10
 spacing = 1
 warn-percentage = 75
-label-mounted = %mountpoint%: %percentage_used%% %used%/%total%
+label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%% %used%/%total%
 
 [module/cpu]
 type = internal/cpu
-interval = 0.5
-warn-percentage = 100
-label = CPU %percentage%%
+interval = 1
+format-prefix = "CPU "
+format-prefix-foreground = ${colors.primary}
+label = %percentage%%
 
 [module/memory]
 type = internal/memory
-interval = 3
-warn-percentage = 95
-format = <label>
-label = RAM %percentage_used%% %gb_used%/%gb_total% Swap %percentage_swap_used%% %gb_swap_used%/%gb_swap_total%
+interval = 1
+format-prefix = "RAM "
+format-prefix-foreground = ${colors.primary}
+label = %percentage_used%% %gb_used%/%gb_total%
+
+[module/swap]
+type = internal/memory
+interval = 1
+format-prefix = "Swap "
+format-prefix-foreground = ${colors.primary}
+label = %percentage_swap_used%% %gb_swap_used%/%gb_swap_total%
 
 [module/xworkspaces]
 type = internal/xworkspaces
@@ -92,9 +114,9 @@ label-empty-padding = 1
 type = internal/battery
 full-at = 99
 low-at = 10
-label-charging = Battery Charging %percentage%%
-label-discharging = Battery Discharging %percentage%%
-label-full = Battery Full %percentage%%
+label-charging = %{F#f0c674}BAT%{F-} Charging %percentage%%
+label-discharging = %{F#f0c674}BAT%{F-} Discharging %percentage%%
+label-full = %{F#f0c674}BAT%{F-} Full %percentage%%
 
 [module/date]
 type = internal/date
@@ -102,6 +124,7 @@ interval = 1.0
 date = %Y/%m/%d%
 time = %H:%M:%S
 label = %date% %time%
+label-foreground = ${colors.primary}
 
 [module/xwindow]
 type = internal/xwindow
