--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -32,7 +32,7 @@ background = ${colors.background}
 foreground = ${colors.foreground}
 bottom = true
 font-0 = Dejavu Sans Mono:size=10
-modules-left = cpu memory swap battery filesystem pulseaudio
+modules-left = memory swap battery uptime pulseaudio
 module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
@@ -129,6 +129,11 @@ label-foreground = ${colors.primary}
 [module/xwindow]
 type = internal/xwindow
 label = %title%
+
+[module/uptime]
+type = custom/script
+exec = uptime -p
+interval = 60
 
 [settings]
 screenchange-reload = true
