update polybar config

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -12,6 +12,7 @@ background = ${colors.background}
 foreground = ${colors.foreground}
 bottom = false
 font-0 = Dejavu Sans Mono:size=10
+font-1 = WenQuanYi Zen Hei:size=10
 modules-left = xworkspaces
 modules-center = xwindow
 modules-right = date
