update polybar config

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -11,11 +11,12 @@ disabled = #707880
 background = ${colors.background}
 foreground = ${colors.foreground}
 bottom = false
-font-0 = Dejavu Sans Mono:size=10
-font-1 = WenQuanYi Zen Hei:size=10
-modules-left = xworkspaces
+font-0 = Terminus:size=10
+font-1 = Dejavu Sans Mono:size=10
+font-2 = WenQuanYi WenQuanYi Bitmap Song:size=10
+modules-left = xworkspaces memory swap battery
 modules-center = xwindow
-modules-right = date
+modules-right = pulseaudio uptime date
 module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
@@ -25,23 +26,6 @@ tray-scale = 1.0
 dpi-x = 96
 dpi-y = 96
 double-click-interval = 400
-; radius = 6
-; border-size = 4pt
-
-[bar/bottom]
-background = ${colors.background}
-foreground = ${colors.foreground}
-bottom = true
-font-0 = Dejavu Sans Mono:size=10
-modules-left = memory swap battery uptime pulseaudio
-module-margin = 1
-separator = |
-separator-foreground = ${colors.disabled}
-dpi-x = 96
-dpi-y = 96
-double-click-interval = 400
-; radius = 6
-; border-size = 4pt
 
 [module/pulseaudio]
 type = internal/pulseaudio
