--- a/.config/i3/config
+++ b/.config/i3/config
@@ -61,7 +61,7 @@ exec --no-startup-id flameshot
 exec --no-startup-id xfce4-clipman
 exec --no-startup-id xfce4-power-manager
 exec --no-startup-id /usr/lib/xfce4/notifyd/xfce4-notifyd
-exec --no-startup-id feh --bg-fill /usr/share/backgrounds/archlinux/archwave.png
+exec --no-startup-id feh --bg-fill /usr/share/backgrounds/archlinux/mountain.jpg
 exec --no-startup-id polybar top
 exec --no-startup-id polybar bottom
 
