--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,7 +1,8 @@
-font_family				JetBrainsMono NF
+font_family				JetBrainsMono Nerd Font
 font_size				10.0
-background_opacity		1.0
+background_opacity		0.85
 cursor_shape			block
 cursor_blink_interval	0
 shell_integration		no-cursor
 term					xterm-256color
+enable_audio_bell		no
