--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,6 +1,7 @@
 font_family				JetBrainsMono Nerd Font
 font_size				10.0
 background_opacity		0.85
+background_blur 64
 cursor_shape			block
 cursor_blink_interval	0
 shell_integration		no-cursor
