--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,12 +1,1 @@
-set -g set-titles on
-set -g set-titles-string "#T"
-set-option -g base-index 1
-set-option -g pane-base-index 1
-set-option -g bell-action none
-bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
-set-option -ga terminal-overrides ",*256col*:Tc"
-set -g status-bg black
-set -g status-fg white
-set -g status-interval 1
-set -g status-right '#[fg=cyan]#(date "+%Y/%m/%d %H:%M:%S")'
-setw -g automatic-rename
+.tmux/.tmux.conf
