--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -2,7 +2,7 @@
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
     "logo": {
         "type": "file-raw",
-        "source": "logo.txt"
+        "source": "~/.config/fastfetch/logo.txt"
     },
     "modules": [
         "title",
@@ -10,13 +10,11 @@
         "os",
         "host",
         "kernel",
-        "initsystem",
         "uptime",
         "loadavg",
         "packages",
         "shell",
         "display",
-        "lm",
         "de",
         "wm",
         "wmtheme",
@@ -37,10 +35,6 @@
             "showSubvolumes": true
         },
         "battery",
-        "player",
-        "media",
-        "datetime",
-        "locale",
         "users",
         "physicaldisk",
         "break",
