feat(termux): enable black ui

--- a/.termux/termux.properties
+++ b/.termux/termux.properties
@@ -90,7 +90,7 @@ volume-keys = volume
 ###############
 
 ### Force black colors for drawer and dialogs
-# use-black-ui = true
+use-black-ui = true
 
 ###############
 # HW keyboard shortcuts
