feat(termux): add keys

--- a/.termux/termux.properties
+++ b/.termux/termux.properties
@@ -68,8 +68,9 @@ volume-keys = volume
 # extra-keys = [[ESC, TAB, CTRL, ALT, {key: '-', popup: '|'}, DOWN, UP]]
 
 ### Two rows with more keys
-# extra-keys = [['ESC','/','-','HOME','UP','END','PGUP'], \
-#               ['TAB','CTRL','ALT','LEFT','DOWN','RIGHT','PGDN']]
+extra-keys = [['[]','APOSTROPHE','QUOTE',"+","=",'{}','<>','DRAWER'], \
+              ['ESC','BACKSLASH','|',{macro: "CTRL b", display: "tmux"},'HOME','UP','END','PGUP'], \
+              ['TAB','CTRL','ALT','`','LEFT','DOWN','RIGHT','PGDN']]
 
 ### Configuration with additional popup keys (swipe up from an extra key)
 # extra-keys = [[ \
