--- a/.termux/termux.properties
+++ b/.termux/termux.properties
@@ -68,7 +68,7 @@ volume-keys = volume
 # extra-keys = [[ESC, TAB, CTRL, ALT, {key: '-', popup: '|'}, DOWN, UP]]
 
 ### Two rows with more keys
-extra-keys = [['[]','APOSTROPHE','QUOTE',"+","=",'{}','<>','DRAWER'], \
+extra-keys = [['[]','APOSTROPHE','QUOTE',"+","=",'{}','<>',{key: "DRAWER", popup: "KEYBOARD"}], \
               ['ESC','BACKSLASH','|',{macro: "CTRL b", display: "tmux"},'HOME','UP','END','PGUP'], \
               ['TAB','CTRL','ALT','`','LEFT','DOWN','RIGHT','PGDN']]
 
