--- a/.termux/termux.properties
+++ b/.termux/termux.properties
@@ -69,7 +69,7 @@ volume-keys = volume
 
 ### Two rows with more keys
 extra-keys = [['[]','APOSTROPHE','QUOTE',"+","=",'{}','<>',{key: "DRAWER", popup: "KEYBOARD"}], \
-              ['ESC','BACKSLASH','|',{macro: "CTRL b", display: "tmux"},'HOME','UP','END','PGUP'], \
+              ['ESC',{macro: "CTRL b", display: "tmux", popup: {macro: "CTRL l", display: "clear"}},'BACKSLASH','|','HOME','UP','END','PGUP'], \
               ['TAB','CTRL','ALT','`','LEFT','DOWN','RIGHT','PGDN']]
 
 ### Configuration with additional popup keys (swipe up from an extra key)
