--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".tmux"]
 	path = .tmux
 	url = https://github.com/gpakosz/.tmux
+[submodule ".themes"]
+	path = .themes
+	url = https://github.com/addy-dclxvi/openbox-theme-collections
