--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -4,16 +4,15 @@
     "height": 28,
     "spacing": 4,
     "modules-left": [
-        "wlr/taskbar"
+        "cpu",
+        "custom/gpu-usage",
+        "memory"
     ],
     "modules-center": [
-        "mpris"
+        "wlr/taskbar"
     ],
     "modules-right": [
         "battery",
-        "cpu",
-        "custom/gpu-usage",
-        "memory",
         "tray",
         "clock"
     ],
@@ -22,10 +21,6 @@
         "tooltip-format": "{title}",
         "on-click": "minimize-raise",
         "on-click-middle": "close"
-    },
-    "mpris": {
-        "format": " {title} - {artist}",
-        "format-paused": "⏸ {title} - {artist}"
     },
     "cpu": {
         "interval": 1,
@@ -64,7 +59,6 @@
     },
     "clock": {
         "interval": 1,
-        "format": "{:%H:%M:%S}",
-        "tooltip-format": "{:%Y-%m-%d}"
+        "format": "{:%Y-%m-%d %H:%M:%S}"
     }
 }
