--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -1,104 +1,63 @@
 {
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
     "logo": {
-        "type": "file-raw",
-        "source": "~/.config/fastfetch/logo.txt"
-    },
-    "display": {
-        "brightColor": false,
-        "key": {
-            "type": "icon"
-        },
-        "separator": " "
+        "padding": {
+            "top": 2
+        }
     },
     "modules": [
         "title",
-        {
-            "type": "os",
-            "keyColor": "38;2;210;69;83"
-        },
-        {
-            "type": "kernel",
-            "keyColor": "38;2;210;69;83"
-        },
-        {
-            "type": "packages",
-            "keyColor": "38;2;210;69;83"
-        },
+        "separator",
+        "os",
+        "host",
+        "kernel",
+        "initsystem",
+        "uptime",
+        "loadavg",
+        "packages",
+        "shell",
+        "display",
+        "lm",
+        "de",
+        "wm",
+        "wmtheme",
+        "theme",
+        "icons",
+        "font",
+        "cursor",
+        "terminal",
+        "terminalfont",
         {
             "type": "cpu",
-            "keyColor": "38;2;254;100;11",
             "showPeCoreCount": true,
             "temp": true
         },
         {
-            "type": "uptime",
-            "keyColor": "38;2;254;100;11"
-        },
-        {
-            "type": "loadavg",
-            "keyColor": "38;2;254;100;11",
-            "keyIcon": "󰓅"
-        },
-        {
             "type": "gpu",
-            "keyColor": "38;2;254;100;11"
+            "driverSpecific": true,
+            "temp": true
         },
-        {
-            "type": "memory",
-            "keyColor": "38;2;223;142;29",
-            "keyIcon": ""
-        },
-        {
-            "type": "swap",
-            "keyColor": "38;2;223;142;29"
-        },
-        {
-            "type": "disk",
-            "keyColor": "38;2;223;142;29",
-            "showSubvolumes": true
-        },
-        {
-            "type": "physicaldisk",
-            "keyColor": "38;2;223;142;29"
-        },
+        "memory",
+        "physicalmemory",
+        "swap",
+        "disk",
+        "btrfs",
+        "zpool",
         {
             "type": "battery",
-            "keyColor": "38;2;64;160;43"
+            "temp": true
         },
         {
-            "type": "display",
-            "keyColor": "38;2;64;160;43"
+            "type": "localip"
         },
+        "datetime",
+        "locale",
+        "users",
         {
-            "type": "terminal",
-            "keyColor": "38;2;4;165;229"
+            "type": "physicaldisk",
+            "temp": true
         },
-        {
-            "type": "shell",
-            "keyColor": "38;2;4;165;229"
-        },
-        {
-            "type": "de",
-            "keyColor": "38;2;4;165;229"
-        },
-        {
-            "type": "wm",
-            "keyColor": "38;2;4;165;229"
-        },
-        {
-            "type": "theme",
-            "keyColor": "38;2;4;165;229"
-        },
-        {
-            "type": "icons",
-            "keyColor": "38;2;4;165;229",
-            "keyIcon": "󰀻"
-        },
-        {
-            "type": "font",
-            "keyColor": "38;2;4;165;229"
-        },
+        "version",
         "break",
         "colors"
     ]
