feat(termux): change extra keys

--- a/.termux/termux.properties
+++ b/.termux/termux.properties
@@ -68,8 +68,7 @@ volume-keys = volume
 # extra-keys = [[ESC, TAB, CTRL, ALT, {key: '-', popup: '|'}, DOWN, UP]]
 
 ### Two rows with more keys
-extra-keys = [['[]','APOSTROPHE','QUOTE',"+","=",'{}','<>',{key: "DRAWER", popup: "KEYBOARD"}], \
-              ['ESC',{macro: "CTRL b", display: "tmux", popup: {macro: "CTRL l", display: "clear"}},'BACKSLASH','|','HOME','UP','END','PGUP'], \
+extra-keys = [['ESC','BACKSLASH','|','HOME','END','UP',{key: "DRAWER", popup: "KEYBOARD"},'PGUP'], \
               ['TAB','CTRL','ALT','`','LEFT','DOWN','RIGHT','PGDN']]
 
 ### Configuration with additional popup keys (swipe up from an extra key)
