tmux: add new config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,1 +1,34 @@
-.tmux/.tmux.conf
+set -g prefix C-b
+set -g escape-time 500
+set -g history-limit 5000
+set -g base-index 1
+setw -g pane-base-index 1
+set -g set-titles off
+set -g set-titles-string "#(whoami)@#h: #I #W \"#{=21:pane_title}\""
+set -g mouse off
+set -ga terminal-overrides ",*256color:Tc"
+set -g bell-action none
+bind r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
+bind -n C-l send-keys C-l \; run 'sleep 0.2' \; clear-history
+setw -g automatic-rename on
+set -g renumber-windows on
+
+set -g status-position top
+set -g status-interval 1
+set -g status-left-length 100
+set -g status-right-length 100
+set -g status-left "[#S] "
+set -g status-right "#{prefix_highlight}#[fg=brightwhite,bg=#363636] #(whoami)@#h #[fg=brightwhite,bg=brightblack] %Y-%m-%d %H:%M "
+set -g status-style bg=default
+set -g window-status-format "#[fg=white,bg=brightblack] #I #[fg=white,bg=#363636] #W "
+set -g window-status-current-format "#[fg=brightwhite,bg=green] #I #[fg=brightwhite,bg=blue] #W "
+set -g window-status-separator " "
+set -g status-justify left
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g default-terminal "tmux-256color"
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+run '~/.tmux/plugins/tpm/tpm'
